[project]
name = "claude-code-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cachetools>=6.2.2",
    "grpcio>=1.76.0",
    "modal>=1.2.4",
    "numpy==2.2.6",
    "openai-harmony>=0.0.8",
    "openai>=1.99.1",
    "pandas>=2.3.3",
    "polars>=1.35.2",
    "protobuf>=6.33.1",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.1",
    "tinker>=0.5.1",
    "torch==2.9.0",
    "vllm==0.11.2; sys_platform == 'linux'",
    "jupyter-client>=8.6.3",
    "ipykernel>=7.1.0",
    "fastapi>=0.122.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.13.2",
]

[tool.pytest.ini_options]
testpaths = [".claude"]

[tool.ruff.lint]
ignore = ["W391", "W292", "W293", "E402"]  # Ignore blank line, trailing whitespace, and import order rules

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = "kaggle_evaluation.*"
ignore_errors = true

[tool.pyright]
venvPath = "."
venv = ".venv"
